--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_blue_plus:
   permission_handler:
-#  zebra_rfid_sdk_plugin: ^0.0.3
+  zebra_rfid_sdk_plugin: ^0.0.3
   provider:
   mobile_scanner:
   lottie:
   qr_flutter:
   fluttertoast:
   dio:
-  zebra123: ^4.0.0
 
 #  pda_rfid_scanner:
 
