--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,7 +41,7 @@ android {
     }
 }
 dependencies{
-    implementation project(":RFIDAPI3Library",)
+    implementation project(":libs",)
 }
 
 flutter {
