--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -23,5 +23,4 @@ plugins {
 }
 
 include ":app"
-include ":app", ':RFIDAPI3Library'
-project(":RFIDAPI3Library").projectDir = file("./RFIDAPI3Library")
+include ":app", ':libs'
