--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,10 +35,54 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             minifyEnabled false
-            shrinkResources false
+//            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig = signingConfigs.debug
         }
+
+        debug {
+            signingConfig signingConfigs.debug
+        }
     }
+
+    configurations {
+        configureEach { // You should exclude one of them not both of them
+            exclude group: "com.android.support", module: "support-core-ui"
+            exclude group: "com.android.support", module: "support-compat"
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    buildToolsVersion '30.0.3'
+    namespace 'com.zebra.demo'
+}
+
+dependencies {
+
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.7.7'
+    implementation 'androidx.navigation:navigation-ui:2.7.7'
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'androidx.camera:camera-view:1.3.2'
+    implementation "androidx.camera:camera-camera2:1.3.2"
+    implementation 'androidx.camera:camera-lifecycle:1.3.2'
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.3.0'
+    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'net.lingala.zip4j:zip4j:2.11.5'
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar','API3_NGE-Transport.aar'], exclude: [])
 }
 
 flutter {
